--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "classnames": "^2.3.1",
+    "framer-motion": "^7.5.2",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "mui-datatables": "^4.2.2",
