--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@tawk.to/tawk-messenger-react": "^2.0.1",
     "classnames": "^2.3.1",
     "framer-motion": "^7.5.2",
     "graphql": "^16.5.0",
