--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
