--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql-request": "^4.3.0",
     "mui-datatables": "^4.2.2",
     "next": "12.2.2",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-datocms": "^3.0.15",
     "react-device-detect": "^2.2.2",
@@ -36,6 +37,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
     "@types/node": "18.0.6",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
